--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "devDependencies": {
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
@@ -28,7 +31,7 @@
     "postcss": "^8.4.49",
     "prisma": "^6.2.1",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
-
